@@ -3,7 +3,7 @@
  * For use in distributed.net projects only.
  * Any other distribution or use of this source violates copyright.
  *
- * $Id: cuda_info.h,v 1.3 2010/05/27 00:38:20 snikkel Exp $
+ * $Id: cuda_info.h,v 1.4 2011/11/10 02:09:09 snikkel Exp $
 */
 
 #ifndef CUDA_INFO_H
@@ -19,8 +19,36 @@ long GetRawCUDAGPUID(const char **cpuname);
 unsigned int GetCUDAGPUFrequency();
 
 // Number of cores per MP (varies with SM version)
-// from NVIDIA CUDA SDK 'deviceQuery'
-#define MAX_CUDA_MAJOR 2
-static int CUDACoresPerSM[] = { -1, 8, 32 };
+// from NVIDIA CUDA SDK sample code 'deviceQuery'
+// http://developer.nvidia.com/cuda-cc-sdk-code-samples
+typedef struct
+{
+  int SM; // 0xMm (hexidecimal notation)
+          // M = SM Major version, m = SM minor version
+  int Cores;
+} sSMtoCores;
+sSMtoCores CUDACoresPerSM[] =
+{
+  { 0x10,  8 },
+  { 0x11,  8 },
+  { 0x12,  8 },
+  { 0x13,  8 },
+  { 0x20, 32 },
+  { 0x21, 48 },
+  {   -1, -1 }
+};
 
-#endif // CUDA_INFO_H
+inline int getCUDACoresPerSM (int major, int minor)
+{
+  int index = 0;
+  int SM = (major << 4) + minor;
+
+  while (CUDACoresPerSM[index].SM != -1) {
+    if (CUDACoresPerSM[index].SM == SM ) {
+      return CUDACoresPerSM[index].Cores;
+    }
+    index++;
+  }
+  return -1;
+}
+
