@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.115 2011/11/10 01:33:53 snikkel Exp $
+Version change log: $Id: CHANGES.txt,v 1.116 2011/11/10 02:09:10 snikkel Exp $
 ==========================================================================
 
 2.9100
@@ -37,6 +37,7 @@ Version change log: $Id: CHANGES.txt,v 1.115 2011/11/10 01:33:53 snikkel Exp $
             imp: x86/amd64: AMD APU detection/selection (#4429)
             imp: amd64: Via Nano core selection (#4437)
             imp: x86/amd64: AMD Opeteron 6xxx detection/selection (#4438)
+            fix: cuda: processor counts for newer model fermi cards (#4441)
 
 2.9109.518  fix: all: OGR-NG codebase fixes (#4295)
             fix: all: OGR-NG incorrect node count after full restart
